Introduce Type.withSecondary
- Deprecated Type.mapByStart