@@ -3,8 +3,8 @@ package com.meti.compile.render.block.function;
 import com.meti.compile.render.primitive.EmptyType;
 import com.meti.compile.render.type.Type;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -17,12 +17,31 @@ public class FunctionType implements EmptyType {
         this.parameters = parameters;
     }
 
-    public static FunctionType FunctionType(Type returnType) {
-        return FunctionType(returnType, Collections.emptyList());
+    public static FunctionType FunctionType(Type returnType, Type... parameters) {
+        return FunctionType(returnType, List.of(parameters));
     }
 
     public static FunctionType FunctionType(Type returnType, List<Type> parameters) {
         return new FunctionType(returnType, parameters);
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        FunctionType that = (FunctionType) o;
+        return Objects.equals(returnType, that.returnType) &&
+                Objects.equals(parameters, that.parameters);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(returnType, parameters);
+    }
+
+    @Override
+    public Type withSecondary(Type secondary) {
+        return new FunctionType(secondary, parameters);
     }
 
     @Override
